--- a/frontend/frontend/src/assets/css/NavbarStyle.css
+++ b/frontend/frontend/src/assets/css/NavbarStyle.css
@@ -24,7 +24,7 @@ body {
     font-weight: bold;
 }
 
-.logo-container {
+.logo-container-navbar {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,7 +32,7 @@ body {
     max-width: 100px;
 }
 
-.logo-container img {
+.logo-container-navbar img {
     height: 50px;
     max-width: 100%;
     margin: 0 auto;
