Pepe el palotes - Rutas y CSS Footer mejores

--- a/frontend/frontend/src/assets/css/HomeStyle.css
+++ b/frontend/frontend/src/assets/css/HomeStyle.css
@@ -45,7 +45,7 @@
 }
 
 .button {
-    background-color: #00aaff;
+    background-color: #005f99;
     color: white;
     padding: 15px 30px;
     border: none;
