--- a/frontend/frontend/src/assets/css/AppStyle.css
+++ b/frontend/frontend/src/assets/css/AppStyle.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background-color: rgb(50, 47, 47);
+    background-color: #2c2c2c;
     color: white;
 }
