--- a/frontend/frontend/src/assets/css/modulesStyle/NavbarStyle.css
+++ b/frontend/frontend/src/assets/css/modulesStyle/NavbarStyle.css
@@ -1,16 +1,10 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
-
 .nav-bar {
-    background-color: #00aaff;
+    background-color: #005f99;
     
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 7px 20px;
+    padding: 7px 0px;
     width: 100%; /* Establece el ancho al 100% del contenedor padre */
 }
 
