--- a/frontend/frontend/src/assets/css/AppStyle.css
+++ b/frontend/frontend/src/assets/css/AppStyle.css
@@ -1,6 +1,10 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background-color: #2c2c2c;
-    color: white;
+    background-image: url('@/assets/images/fondo.png'); /* Ruta de la imagen */
+    background-size: cover; /* Asegura que la imagen cubra todo el fondo */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    min-height: 100vh; /* Asegura que el fondo cubra toda la altura de la ventana */
+    color: white; /* Ajusta el color del texto para que contraste con el fondo */
 }
