--- a/frontend/frontend/src/assets/css/ItemsStyle.css
+++ b/frontend/frontend/src/assets/css/ItemsStyle.css
@@ -1,6 +1,6 @@
 /* Página de ítems */
 .items-page {
-    background-color: #2c2c2c;
+    background-color: transparent; /* Fondo transparente */
     color: white;
     min-height: 100vh;
     padding: 20px;
