--- a/frontend/frontend/src/assets/css/CalculadoraXPcss/CalcularXPStyle.css
+++ b/frontend/frontend/src/assets/css/CalculadoraXPcss/CalcularXPStyle.css
@@ -1,3 +1,4 @@
+/* CalcularXPStyle.css */
 .calcular-xp {
     padding: 100px;
     text-align: center;
@@ -6,11 +7,13 @@
     min-height: 100vh;
 }
 
+/* 
+ * Parte de la imagen/logo del principio de la pagina
+ */
 .logo-container-calculadoraxp {
     text-align: center; /* Centra la imagen horizontalmente */
     margin-bottom: 20px; /* Espaciado debajo de la imagen */
 }
-
 .main-logo-calculadoraxp{
     max-width: 20%; /* Reduce el tamaño de la imagen al 50% del contenedor */
     height: auto; /* Mantiene la proporción de la imagen */
@@ -18,6 +21,50 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para un efecto visual */
 }
 
+
+/*
+ * Parte del boton de añadir monstruo
+ */
+ .add-monster-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 0;
+    padding: 0 10px;
+}
+
+.btn-limpiar {
+    padding: 10px 15px;
+    background-color: #e53935;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 0.95rem;
+    transition: background-color 0.3s ease;
+}
+
+.btn-limpiar:hover {
+    background-color: #c62828;
+}
+
+.link-añadir-monstruo {
+    color: #2196f3;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 0.95rem;
+    transition: color 0.3s ease;
+}
+
+.link-añadir-monstruo:hover {
+    color: #1976d2;
+}
+
+
+
+/*
+ * Parte de la tabla de monstruos
+ */
 .tabla-monstruos {
     margin-bottom: 20px;
     overflow-x: auto;
@@ -49,6 +96,17 @@ tbody tr:hover {
     background-color: #162fe8;
 }
 
+tbody tr:nth-child(even) {
+    background-color: #363535;
+}
+tbody tr:nth-child(even):hover {
+    background-color: #162fe8;
+}
+
+
+/*
+ * Parte del boton de calcular XP
+ */
 .xp-info {
     display: flex;
     justify-content: center;
@@ -76,6 +134,10 @@ tbody tr:hover {
     background-color: #45a049;
 }
 
+
+/*
+ * Parte del modulo de reparto de XP por jugadores
+ */
 .modulo-reparto {
     position: fixed;
     top: 50%;
