--- a/frontend/frontend/src/assets/css/addPageStyle.css
+++ b/frontend/frontend/src/assets/css/addPageStyle.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.2);
   padding: 30px;
+  padding-top: 0px;
   border-radius: 15px;
   color: white;
   text-align: center;
