--- a/frontend/frontend/src/assets/css/modulesStyle/FooterStyle.css
+++ b/frontend/frontend/src/assets/css/modulesStyle/FooterStyle.css
@@ -91,6 +91,7 @@
 .social-icons {
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-block-end: 40px;
   display: flex;
   justify-content: center;
 }
