Leves mejoras visuales en el checkbox de 'CalcularXP' y se quitaron las clases css de la imagen del logo de las paginas de las tablas ('TableStyle.css').

--- a/frontend/frontend/src/assets/css/MonstersStyles/CalcularXPStyle.css
+++ b/frontend/frontend/src/assets/css/MonstersStyles/CalcularXPStyle.css
@@ -236,3 +236,9 @@ td:first-child input[type="checkbox"] {
     margin: 0 auto;
     display: block;
 }
+
+/* Color del checbox */
+input[type="checkbox"] {
+    accent-color: #042032; /* Cambia el color del checkbox */
+    /* accent-color: #0d1a80; /* Cambia el color del checkbox * */
+}
