Mejora del commit anterior

--- a/frontend/frontend/src/assets/css/MonstersStyles/CalcularXPStyle.css
+++ b/frontend/frontend/src/assets/css/MonstersStyles/CalcularXPStyle.css
@@ -239,6 +239,6 @@ td:first-child input[type="checkbox"] {
 
 /* Color del checbox */
 input[type="checkbox"] {
-    accent-color: #042032; /* Cambia el color del checkbox */
-    /* accent-color: #0d1a80; /* Cambia el color del checkbox * */
+    /* accent-color: #042032; /* Cambia el color del checkbox * */
+    accent-color: #0d1a80; /* Cambia el color del checkbox */
 }
