--- a/frontend/frontend/src/assets/css/ItemsStyles/ItemsStyle.css
+++ b/frontend/frontend/src/assets/css/ItemsStyles/ItemsStyle.css
@@ -60,20 +60,60 @@ input[type="text"] {
   margin-top: 30px;
 }
 
+/* XXXXXXXXXXXXXXXXXXXX */
+.factura-contenedor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  position: sticky;
+  bottom: 0;
+  background-color: transparent;
+  padding-bottom: 20px;
+  box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.05);
+}
+
+.xp-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    position: sticky;
+    bottom: 0;
+    background-color: transparent;
+    padding-bottom: 20px;
+    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.05);
+}
+
+.xp-total-button {
+    padding: 10px 20px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+}
+
+.xp-total-button:hover {
+    background-color: #45a049;
+    transform: scale(1.1); /* Aumenta el tamaño un poco */
+    transition: transform 0.2s ease; /* Suaviza la transición */
+}
+
+
+/* XXXXXXXXXXXXXXXXXXXX */
+
 .btn-factura-flotante {
-  position: fixed;
-  right: 32px;
-  bottom: 32px;
-  z-index: 2000;
-  background: #4caf50;
-  color: #fff;
-  font-size: 1.5em;
-  padding: 24px 48px;
-  border: none;
-  border-radius: 16px;
-  box-shadow: 0 4px 24px #0005;
-  cursor: pointer;
-  transition: background 0.2s, transform 0.2s;
+    padding: 10px 20px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
 }
 .btn-factura-flotante:disabled {
   background: #aaa;
