--- a/frontend/frontend/src/assets/css/ItemsStyles/ItemsStyle.css
+++ b/frontend/frontend/src/assets/css/ItemsStyles/ItemsStyle.css
@@ -10,26 +10,6 @@
 }
 
 
-/* Botón para añadir ítems */
-.add-item-container {
-    text-align: right;
-    margin-bottom: 20px;
-}
-
-.add-item-button {
-    padding: 10px 20px;
-    background-color: #005f99;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-}
-
-.add-item-button:hover {
-    background-color: #004080; /* Azul más oscuro al pasar el cursor */
-}
-
 .table-responsive table {
   width: 100%;
   min-width: 600px;
@@ -60,71 +40,8 @@ input[type="text"] {
   margin-top: 30px;
 }
 
-/* XXXXXXXXXXXXXXXXXXXX */
-.factura-contenedor {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-  position: sticky;
-  bottom: 0;
-  background-color: transparent;
-  padding-bottom: 20px;
-  box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.05);
-}
 
-.xp-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    position: sticky;
-    bottom: 0;
-    background-color: transparent;
-    padding-bottom: 20px;
-    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.05);
-}
-
-.xp-total-button {
-    padding: 10px 20px;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color 0.3s ease;
-}
-
-.xp-total-button:hover {
-    background-color: #45a049;
-    transform: scale(1.1); /* Aumenta el tamaño un poco */
-    transition: transform 0.2s ease; /* Suaviza la transición */
-}
-
-
-/* XXXXXXXXXXXXXXXXXXXX */
-
-.btn-factura-flotante {
-    padding: 10px 20px;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color 0.3s ease;
-}
-.btn-factura-flotante:disabled {
-  background: #aaa;
-  cursor: not-allowed;
-  opacity: 0.7;
-}
-.btn-factura-flotante:hover:not(:disabled) {
-  background: #388e3c;
-  transform: scale(1.05);
-}
-.deseleccionar-btn {
-  padding: 12px 28px;
-  font-size: 1.1em;
+/* Configuración botno calcular factura/xp (en TableStyle.css) */
+.modulo-reparto {
+    text-align: left !important;
 }
