--- a/frontend/frontend/src/assets/css/TableStyle.css
+++ b/frontend/frontend/src/assets/css/TableStyle.css
@@ -17,6 +17,26 @@
     font-size: 1rem;
     transition: background-color 0.3s ease;
 }
+.btn-añadir:hover {
+    background-color: #388e3c; /* Verde más oscuro al pasar el cursor */
+    transform: scale(1.1); /* Aumenta el tamaño un poco */
+    transition: transform 0.2s ease; /* Suaviza la transición */
+}
+.btn-limpiar {
+    padding: 10px 15px;
+    background-color: #e53935;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+}
+.btn-limpiar:hover {
+    background-color: #c62828;
+    transform: scale(1.1); /* Aumenta el tamaño un poco */
+    transition: transform 0.2s ease; /* Suaviza la transición */
+}
 
 
 /* Estilo de las TABLAS */
@@ -177,6 +197,20 @@ td:last-child {
   /* NO display: flex aquí */
 }
 
+
+/* Estilo para el contenedor de limpiar y añadir */
+.add-container {
+    display: flex;
+    justify-content: space-between; /* Espaciado entre los botones */
+    align-items: center; /* Alineación vertical */
+    margin: 0px -10px; /* Margen superior e inferior */
+    padding: 10px; /* Espaciado interno */
+    border-radius: 8px; /* Bordes redondeados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para un efecto visual */
+}
+
+
+
 /* Nuevo contenedor para los botones de acciones */
 .acciones-btns {
   display: flex;
@@ -194,6 +228,58 @@ td:last-child {
   max-height: 120px; 
   margin-bottom: 10px;
 }
+
+/* Configuración botno calcular factura/xp */
+.factura-contenedor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  position: sticky;
+  bottom: 0;
+  background-color: transparent;
+  padding-bottom: 20px;
+  box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.05);
+}
+.btn-factura-flotante {
+    padding: 10px 20px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+}
+.btn-factura-flotante:disabled {
+  background: #aaa;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+.btn-factura-flotante:hover:not(:disabled) {
+  background: #388e3c;
+  transform: scale(1.05);
+}
+.deseleccionar-btn {
+  padding: 12px 28px;
+  font-size: 1.1em;
+}
+.modulo-calculo {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    z-index: 10;
+    width: 90%;
+    max-width: 400px;
+    text-align: center;
+}
+
 
 /*
  * Estilo de los botones de paginación 
