--- a/frontend/frontend/src/assets/css/TableStyle.css
+++ b/frontend/frontend/src/assets/css/TableStyle.css
@@ -230,7 +230,7 @@ td:last-child {
 }
 
 /* Configuración botno calcular factura/xp */
-.factura-contenedor {
+.contenedor-calculadora {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -241,7 +241,7 @@ td:last-child {
   padding-bottom: 20px;
   box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.05);
 }
-.btn-factura-flotante {
+.btn-calculadora-flotante {
     padding: 10px 20px;
     background-color: #4caf50;
     color: white;
@@ -251,12 +251,12 @@ td:last-child {
     font-size: 1rem;
     transition: background-color 0.3s ease;
 }
-.btn-factura-flotante:disabled {
+.btn-calculadora-flotante:disabled {
   background: #aaa;
   cursor: not-allowed;
   opacity: 0.7;
 }
-.btn-factura-flotante:hover:not(:disabled) {
+.btn-calculadora-flotante:hover:not(:disabled) {
   background: #388e3c;
   transform: scale(1.05);
 }
