--- a/frontend/frontend/src/assets/css/addPageStyle.css
+++ b/frontend/frontend/src/assets/css/addPageStyle.css
@@ -41,6 +41,10 @@
 }
 
 
+h1 {
+  margin-top: 35px;
+}
+
 
 
 /**
@@ -78,23 +82,6 @@
 }
 
 
-
-/**
- * Logo de la parte superior de la pantalla
- */
-.logo-container {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-}
-.add-monster-logo {
-  width: 300px;
-  height: 300px;
-  border-radius: 20%;
-  margin-bottom: 0px;
-}
 
 
 /**
